@@ -1,13 +1,0 @@
-#!/usr/bin/env bash
-#
-# Author: Makarius
-#
-# Invoke ocaml via "opam".
-
-if [ -d "$ISABELLE_OPAM_ROOT" ]
-then
-  isabelle_opam config exec --switch "$ISABELLE_OCAML_VERSION" -- ocaml "$@"
-else
-  echo "Cannot execute ocaml: missing Isabelle OCaml setup" >&2
-  exit 127
-fi
